--- a/MY LOGS/.obsidian/appearance.json
+++ b/MY LOGS/.obsidian/appearance.json
@@ -3,7 +3,7 @@
   "translucency": false,
   "monospaceFontFamily": "Maple Mono SC NF,Noto Sans Mono CJK SC",
   "baseFontSize": 16,
-  "cssTheme": "theme",
+  "cssTheme": "Things",
   "accentColor": "#8826c9",
   "theme": "moonstone",
   "enabledCssSnippets": [
