--- a/MY LOGS/.obsidian/appearance.json
+++ b/MY LOGS/.obsidian/appearance.json
@@ -5,7 +5,7 @@
   "baseFontSize": 16,
   "cssTheme": "Things",
   "accentColor": "#8826c9",
-  "theme": "moonstone",
+  "theme": "obsidian",
   "enabledCssSnippets": [
     "预览模式优化-空白行-行间距",
     "yaozhuwa@CSS",
